fix button color in dark mode

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -165,10 +165,10 @@ body.dark-mode {
   }
 
   a {
-    color: #58a6ff;
+    color: #deebf3;
   }
   a:hover, a:focus {
-    color: #80bfff;
+    color: #cedbf3;
   }
 
   blockquote {
